# bevy_game

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  config.yml
src/: components.rs  input.rs  main.rs  movement.rs  plugin.rs  render.rs  util.rs
